--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "bootstrap": "^3.3.7",
     "cross-env": "^3.1.3",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
@@ -48,6 +49,7 @@
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
+    "lodash": "^4.17.4",
     "react-transform-hmr": "^1.0.4",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
