--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "bootstrap": "^3.3.7",
     "cross-env": "^3.1.3",
+    "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-formatter-pretty": "^1.1.0",
@@ -49,8 +50,11 @@
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-react": "^6.8.0",
+    "file-loader": "^0.10.0",
     "lodash": "^4.17.4",
     "react-transform-hmr": "^1.0.4",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
