--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/vasanthk/react-es6-webpack-boilerplate",
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "body-parser": "^1.16.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
